objects/CMPL123QMS__Phase_1B_Investigation__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123QMS__Assessment_Confirmation_Details__c</fullName>
        <label>Assessment Confirmation Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Assessment_Confirmed__c</fullName>
        <label>Assessment Confirmed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Assigned_To_Me__c</fullName>
        <formula>CMPL123QMS__Assigned_To__c = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Me?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Phase_1B_Investigations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Department__c</fullName>
        <label>Department</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CMPL123QMS__Department</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Due_Date__c</fullName>
        <label>Due Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Hypothesis__c</fullName>
        <label>Hypothesis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__OOS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OOS</label>
        <referenceTo>CMPL123QMS__OOS__c</referenceTo>
        <relationshipLabel>Phase 1B Investigations</relationshipLabel>
        <relationshipName>Phase_1B_Investigations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Other_Cause__c</fullName>
        <label>Other Cause</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Phase_1B_Cause__c</fullName>
        <label>Phase 1B Cause</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Technician Error</fullName>
                </value>
                <value>
                    <fullName>Sample/Standard Prep</fullName>
                </value>
                <value>
                    <fullName>Analytical Method</fullName>
                </value>
                <value>
                    <fullName>Equipment Failure</fullName>
                </value>
                <value>
                    <fullName>Deviation from Procedure</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Phase_1B_Details__c</fullName>
        <label>Phase 1B Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Root_Cause_Determined__c</fullName>
        <label>Root Cause Determined?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Short_Description__c</fullName>
        <label>Short Description</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Testing_Results__c</fullName>
        <label>Testing Results</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Phase 1B Investigation</label>
    <nameField>
        <displayFormat>PH1B-{00000}</displayFormat>
        <label>Phase 1B Investigation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Phase 1B Investigations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CMPL123QMS__Due_Dates_cannot_be_past_date</fullName>
        <active>true</active>
        <errorConditionFormula>AND( CMPL123QMS__Due_Date__c  &lt; TODAY(), OR( ISNEW(), ISCHANGED( CMPL123QMS__Due_Date__c )))</errorConditionFormula>
        <errorDisplayField>CMPL123QMS__Due_Date__c</errorDisplayField>
        <errorMessage>Due Date cannot be set in the past.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123QMS__Phase_1B_Investigation_Cause_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISPICKVAL( CMPL123QMS__Phase_1B_Cause__c , "Other"), 
ISBLANK(  CMPL123QMS__Other_Cause__c ), false)</errorConditionFormula>
        <errorDisplayField>CMPL123QMS__Other_Cause__c</errorDisplayField>
        <errorMessage>Other Cause is required when Phase 1B Cause is populated with a value of Other.</errorMessage>
    </validationRules>
</CustomObject>